# Preview

./: CLAUDE.md  Cargo.toml  README.md
src/: actions.rs  annotation.rs  callbacks.rs  coords.rs  crop_gesture.rs  dialogs.rs  draw.rs  export.rs  hit_test.rs  image_closures.rs  image_ops.rs  main.rs  shape_gesture.rs  state.rs  text_callbacks.rs  text_closures.rs  text_gesture.rs  transforms.rs  widgets.rs
