[package]
name = "Preview"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "preview"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "gif", "bmp", "tiff", "webp",
] }
pangocairo = "0.20"
